<resources>
    <string name="app_name">My Movies</string>
    <string name="delete_all_menu_item">Delete All Movies</string>
    <string name="exit_menu_item">Exit</string>
    <string name="save_button">Save</string>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="share_button">Share</string>
    <string name="close_button">Close</string>
    <string name="delete_all_dialog_title">Delete All Movies</string>
    <string name="delete_all_dialog_message">Are you sure?</string>
    <string name="exit_dialog_title">Exit My Movies</string>
    <string name="exit_dialog_message">Are you sure?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">CANCEL</string>
    <string name="add_movie_dialog_title">Add Movie</string>
    <string name="add_movie_dialog_message">How would you like to add the movie?</string>
    <string name="add_movie_dialog_web_button">FROM WEB</string>
    <string name="add_movie_dialog_manually_button">MANUALLY</string>
    <string name="edit_delete_movie_dialog_title">Edit/Delete Movie</string>
    <string name="edit_delete_movie_dialog_message">What would you like to do with this movie?</string>
    <string name="edit_delete_movie_dialog_edit_button">EDIT</string>
    <string name="edit_delete_movie_dialog_delete_button">DELETE</string>
    <string name="bad_url_dialog_title">Invalid URL</string>
    <string name="bad_url_dialog_message">The url for the movie poster is invalid</string>
    <string name="movie_title_text_hint">Enter Movie Title</string>
    <string name="movie_plot_text_hint">Enter Movie Plot Summary</string>
    <string name="movie_url_text_hint">Enter Movie Poster URL</string>
    <string name="search_movie_text_hint">Search for a Movie Title</string>
    <string name="search_no_results">No Matching Results Found</string>
    <string name="search_no_results_dialog_message">Please Try Again</string>
    <string name="search_text_empty_dialog_title">The Search is Empty</string>
    <string name="search_text_empty_dialog_message">Enter Movie Title to Search</string>
    <string name="no_internet_dialog_title">There is no Connection to the Internet</string>
    <string name="no_internet_dialog_message">Please try again later</string>
    <string name="empty_title_dialog_title">Movie Title is Empty</string>
    <string name="empty_title_dialog_message">Enter the Movie Title</string>
    <string name="movie_watched">I Watched It!</string>
    <string name="choose_service">Choose how to share</string>
    <string name="movie_added">I Added the Movie </string>
</resources>
