<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jbt.mymovies.MovieActivity"
    android:weightSum="1">


        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_loading_progress_bar"
            android:visibility="gone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movie_title_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/movie_title_text_hint"
        android:inputType="text" />


    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/movie_plot_text"
        android:focusableInTouchMode="true"
        android:hint="@string/movie_plot_text_hint"
        android:layout_weight="0.35" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/movie_url_text"
            android:hint="@string/movie_url_text_hint"
            android:layout_weight="0.8"
            android:inputType="text" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/show_poster_button"
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_gravity="left" />
    </LinearLayout>

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <CheckBox
        android:layout_height="wrap_content"
        android:id="@+id/movie_watched"
        android:layout_width="match_parent"
        android:text="@string/movie_watched"
        android:layout_weight="0.21"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="20sp" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movieRatingBar"
        android:numStars="5"
        style="@style/Widget.AppCompat.RatingBar"
        android:isIndicator="false"
        android:layout_gravity="center_horizontal"
        android:stepSize="0.5"
        android:elevation="0dp" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button"
            android:id="@+id/movie_share_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/movie_cancel_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_save_update_btn" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
</ScrollView>